# relocal

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml
lore/: 2026-03-15-shared-sync.md  2026-03-22-user-config.md  TODO.md
src/: cli.rs  config.rs  daemon.rs  daemon_client.rs  discovery.rs  error.rs  hooks.rs  lib.rs  main.rs  rsync.rs  runner.rs  session.rs  sidecar.rs  ssh.rs  test_support.rs
src/commands/: claude.rs  codex.rs  destroy.rs  init.rs  install.rs  list.rs  log.rs  mod.rs  nuke.rs  session.rs  ssh.rs  start.rs  status.rs  sync.rs
tests/: integration.rs
