[package]
name = "relocal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
libc = "0.2.183"
nix = { version = "0.31.2", features = ["poll"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-quote = { version = "0.7.2", default-features = false, features = ["bash"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
